// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinefeedPicker loading 1`] = `
<div>
  <div
    class="container mx-auto px-4"
  >
    <div
      class="flex mb-4"
    >
      <div
        class="w-full"
      >
        <h2
          class="text-center"
        >
          ...
        </h2>
      </div>
    </div>
    <div
      class="flex mb-4"
    >
      <div
        class="w-full"
      >
        <h1
          class="font-bold logo my-4 text-5xl text-center"
        >
          Tweries
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`LinefeedPicker to match snapshot 1`] = `
<div>
  <div
    class="container mx-auto px-4"
  >
    <div
      class="flex mb-4"
    >
      <div
        class="w-full"
      >
        <header
          class="flex flex-col items-center"
        >
          <button
            class="bg-gray-300 border border-gray-500 font-bold px-4 rounded"
            data-testid="login"
          >
            Log in
          </button>
        </header>
      </div>
    </div>
    <div
      class="flex mb-4"
    >
      <div
        class="w-full"
      >
        <h1
          class="font-bold logo my-4 text-5xl text-center"
        >
          Tweries
        </h1>
      </div>
    </div>
  </div>
</div>
`;
